fixed the top navigation alignment and added footer

--- a/src/styles.css
+++ b/src/styles.css
@@ -4,6 +4,24 @@
   box-sizing: border-box;
 }
 
+::-webkit-scrollbar {
+  width: 10px;
+}
+
+::-webkit-scrollbar-track {
+  box-shadow: 0 0 5px #31e8ab;
+  border-radius: 10px;
+}
+
+::-webkit-scrollbar-thumb {
+  background-color: #31e8ab;
+  border-radius: 10px;
+}
+
+::-webkit-scrollbar-thumb:hover {
+  background-color: #31e8ab;
+}
+
 html {
   font-family: "Prompt", sans-serif;
 }
@@ -13,7 +31,7 @@ body {
   color: #fff;
 }
 
-a{
+a {
   color: #fff;
   text-decoration: none;
 }
